--- a/scrapelight-backend/main_api/requirements.txt
+++ b/scrapelight-backend/main_api/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 celery==5.3.4
 redis==5.0.1
-sqlalchemy==2.0.23
+sqlalchemy>=2.0.36
 psycopg2-binary==2.9.9
 pydantic==2.11.7
 pydantic_core==2.33.2
